Try to fix non working input files buttons on iOS in dropzone

--- a/Resources/public/css/slrn_dropzone.css
+++ b/Resources/public/css/slrn_dropzone.css
@@ -441,6 +441,7 @@ h4 {
 
 .fakeone {
     padding-left: 6.2em;
+    z-index: -1;
 }
 
 .fakeone--uploading {
